background color is changed

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flask based Solution for VitalNest</title>
 </head>
-<body>
-    <h1>Welcome to VitalNest</h1>
+<body
+    style ="background-color : blue">
+    <h2>Welcome to VitalNest</h2>
     <form action="/login" method="post">
         <label for="aadhar"> Aadhar Id </label>
         <input type="text" name="aadhar" pattern="\d{12}" maxlength="12" minlength="12" required>
