--- a/templates/hospital_dashboard.html
+++ b/templates/hospital_dashboard.html
@@ -5,7 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VitalNest</title>
 </head>
-<body>
-    <h1>Vital Nest Hospital Dashboard</h1>
+<body >
+    <h1 style = "font-size: 70px;">VitalNest</h1>
+    <h2 style = "color : #1a1c1b";><span>&#128522</span> Where life begins again</h2>
+    <img src = "dashboard.jpg" alt = "hospital" width="1000" height = "500">
+
+    <br><br>
+    <label style="font-size: 30px;"><b>Explore by</b></label>
+    <hr>
 </body>
 </html>
