--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vital Nest</title>
 </head>
-<body>
+<body style = "background-color: rgb(108, 171, 194)">
     <h1>Thank you for choosing us</h1>
     <h2>Welcome to Vital Nest - your health is our concern</h2>
     <form action="/registerToDB" method="post">
