--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <title>Flask based Solution for VitalNest</title>
 </head>
 <body
-    style ="background-color : blue">
+    style ="background-color : rgb(164, 164, 201)">
     <h2>Welcome to VitalNest</h2>
     <form action="/login" method="post">
         <label for="aadhar"> Aadhar Id </label>
