--- a/templates/hospital_dashboard.html
+++ b/templates/hospital_dashboard.html
@@ -4,14 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VitalNest</title>
+    <link rel = "stylesheet" href = "style.css">
 </head>
 <body >
-    <h1 style = "font-size: 70px;">VitalNest</h1>
-    <h2 style = "color : #1a1c1b";><span>&#128522</span> Where life begins again</h2>
-    <img src = "dashboard.jpg" alt = "hospital" width="1000" height = "500">
+    <div class = "header">
+        <h1>VitalNest</h1>
+        <div class="top-bar">
+            <a href="#">Login</a>
+            <a href="#">Signup</a>
+    </div>
+    </div>
+    
+    <h2><span>&#128522</span> Where life begins again...........</h2>
+    
 
-    <br><br>
-    <label style="font-size: 30px;"><b>Explore by</b></label>
-    <hr>
+    <div class = "image-row">
+        <img src = "dashboard.jpg" alt = "hospital" >
+        <img src = "Doctor_Holding_Stethoscope.webp" alt = "doctor">
+        <img src = "Older-patient.jpg" alt = "patient">
+    </div>
+
 </body>
 </html>
