--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -7,5 +7,18 @@
 </head>
 <body>
     <h1>Vital Nest Admin Dashboard</h1>
+    <div>
+        <h2>Users data</h2>
+        <h3>{{users}}</h3>
+    </div>
+    <h1>Vital Nest Admin Dashboard</h1>
+    <div>
+        <h2>Log Data</h2>
+        <h3>{{logs}}</h3>
+    </div>
+    <div>
+        <h2>Supply data</h2>
+        <h3>{{supply_data}}</h3>
+    </div>
 </body>
 </html>
