Readdressed the files based on their type

--- a/templates/hospital_dashboard.html
+++ b/templates/hospital_dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VitalNest</title>
-    <link rel = "stylesheet" href = "style.css">
+    <link rel = "stylesheet" href = "/static/style.css">
 </head>
 <body >
     <div class = "header">
@@ -19,9 +19,9 @@
     
 
     <div class = "image-row">
-        <img src = "dashboard.jpg" alt = "hospital" >
-        <img src = "Doctor_Holding_Stethoscope.webp" alt = "doctor">
-        <img src = "Older-patient.jpg" alt = "patient">
+        <img src = "/static/dashboard.jpg" alt = "hospital" >
+        <img src = "/static/Doctor_Holding_Stethoscope.webp" alt = "doctor">
+        <img src = "/static/Older-patient.jpg" alt = "patient">
     </div>
 
 </body>
