--- a/templates/style.css
+++ b/templates/style.css
@@ -53,9 +53,9 @@ body {
     color: darkblue;
 }
 
-header{
+.header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 100px 40px;
+    padding: 20px 10px;
 }
