--- a/templates/hospital_dashboard.html
+++ b/templates/hospital_dashboard.html
@@ -8,16 +8,13 @@
 </head>
 <body >
     <div class = "header">
-        <h1>VitalNest</h1>
+        <h2>VitalNest Hospital_dashBoard - {{hsp_id}}</h2>
         <div class="top-bar">
             <a href="#">Login</a>
             <a href="#">Signup</a>
     </div>
     </div>
-    
     <h2><span>&#128522</span> Where life begins again...........</h2>
-    
-
     <div class = "image-row">
         <img src = "/static/dashboard.jpg" alt = "hospital" >
         <img src = "/static/Doctor_Holding_Stethoscope.webp" alt = "doctor">
