--- a/templates/industry_dashboard.html
+++ b/templates/industry_dashboard.html
@@ -6,6 +6,8 @@
     <title>VitalNest</title>
 </head>
 <body>
-    <h1>Vital Nest pharma Industry Dashboard</h1>
+    <h1>Vital Nest pharma Industry Dashboard {{ind_id}}</h1>
+    POSSIBLE CORE FEATURES
+        1. TO INTRODUCE A NEW TABLET WITH BLOGS AND THESE DATA CAN BE ACCESSED BY MEDICAL REPRESENTATIVES
 </body>
 </html>
