--- a/templates/register.html
+++ b/templates/register.html
@@ -27,6 +27,7 @@
             <option value = "supplier">Supplier</option>
             <option value = "Hospital">Hospital</option>
             <option value = "industry">Industry</option>
+            <option value="rep">Representative</option>
         </select>
         <br>
         <input type="submit" value="register">
