--- a/static/style.css
+++ b/static/style.css
@@ -59,3 +59,20 @@ body {
     align-items: center;
     padding: 20px 10px;
 }
+
+.form{
+    display: flex;
+}
+
+.box{
+    width : 300px;
+    height : 200px;
+    background-color: pink;
+    padding: 50px;
+    margin : 100px 450px;
+}
+
+.container{
+    display: flex;
+    justify-content: center;
+}
