--- a/templates/register.html
+++ b/templates/register.html
@@ -4,22 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vital Nest</title>
+    <link rel = "stylesheet" href = "/static/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body style = "background-color: rgb(108, 171, 194)">
-    <h1>Thank you for choosing us</h1>
-    <h2>Welcome to Vital Nest - your health is our concern</h2>
-    <form action="/registerToDB" method="post">
+<body class="register_card_background">
+    <div>
+    <h1 class="register_card_text_design">Thank you for choosing us</h1>
+    <h2 class="register_card_text_design">Welcome to Vital Nest - your health is our concern</h2>
+    <div class="register_card_design d-flex flex-column flex-row justify-content-center align-items-center container mt-5">
+    <form  action="/registerToDB" method="post">
         <label for="aadhar"> Aadhar Id </label>
         <input type="text" name="aadhar" pattern="\d{12}" maxlength="12" minlength="12" required>
+        <br>
         <br>
         <label for="uname"> User Name </label>
         <input type="text" name="uname" maxlength="25">
         <br>
+        <br>
         <label for="mobile"> Mobile Number </label>
         <input type="text" name="mobile" pattern="\d{10}" maxlength="10" minlength="10" required>
         <br>
+        <br>
         <label for="passwd"> passwd </label>
         <input type="password" name="passwd" maxlength="15" minlength="8" required>
+        <br>
         <br>
         <label for="utype"> Type of user</label>
         <select name="utype" required>
@@ -30,7 +38,10 @@
             <option value="rep">Representative</option>
         </select>
         <br>
-        <input type="submit" value="register">
+        <br>
+        <input class="register_card_button" type="submit" value="Register">
     </form>
+    </div>
+    </div>
 </body>
 </html>
