--- a/templates/supplier_dashboard.html
+++ b/templates/supplier_dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VitalNest</title>
-    <link rel="stylesheet" href="{{ url_for ( 'static',filename = 'style.css' ) }}">
+    <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
     <header class = "s_header">
@@ -23,11 +23,11 @@
             <div>pending</div>
             <div>active</div>
         </section>
-        <br>
+        <br>    
         <table>
             <thead>
                 <tr>
-                    <i><td>name</td></b>
+                    <b><td>name</td></b>
                     <b><td>number</td></b>
                     <b><td>location</td></b>
                     <b><td>status</td></b>
