--- a/templates/industry_dashboard.html
+++ b/templates/industry_dashboard.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VitalNest</title>
+    <link rel = "stylesheet" href = "/static/style.css">
 </head>
 <body>
     <h1>Vital Nest pharma Industry Dashboard {{ind_id}}</h1>
