--- a/templates/index.html
+++ b/templates/index.html
@@ -6,27 +6,27 @@
     <title>VitalNest Login</title>
     <link rel = "stylesheet" href = "/static/style.css">
 </head>
-<body>
+<body class = "login-background">
     <div>
-        <h2>Welcome to VitalNest</h2>
+        <h2 class = "VitalNest_heading">Welcome to VitalNest</h2>
         <form action="/login" method="post" class="box">
-            <div class = "container">
+            <div class = "login_heading">
                 <h3>
                     <b>Login</b>
                 </h3>
             </div>
-            <div class="form">
-                <label for="aadhar">Aadhar ID</label>
+            <div class = "login_label">
+                <label for="aadhar">Aadhar ID </label>
                 <input type="text" id="aadhar" name="aadhar" pattern="\d{12}" maxlength="12" minlength="12" required>
             </div>
-            <div class="form">
-                <label for="passwd">Password</label>
+            <div class = "login_label">
+                <label for="passwd">Password </label>
                 <input type="password" id="passwd" name="passwd" maxlength="15" minlength="8" required>
             </div>
-            <button type="submit">Login</button>
+            <div class = "login_btn"><button type ="submit" >Login</button></div>
         </form>
         <p>
-            <a href="{{ url_for('register') }}">Not yet registered? Click here</a>
+            <a href="{{ url_for('register') }}" id = "register_btn">Not yet registered? Click here</a>
         </p>
     </div>
 </body>
