--- a/templates/supplier_dashboard.html
+++ b/templates/supplier_dashboard.html
@@ -4,41 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VitalNest</title>
-    <link rel="stylesheet" href="{{ url_for ( 'static',filename = 'style.css' ) }}">
+    <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
-    <header class = "s_header">
-        <!-- <div> -->
-            <h1>Supplier Dashboard</h1>
-        <!-- </div> -->
-        <!-- <div> -->
-            <input id = "search" placeholder="search supplier"/>
-            <button>add supplier</button>
-        <!-- </div> -->
-    </header>
-
-    <main>
-        <section>
-            <div>total suppliers</div>
-            <div>pending</div>
-            <div>active</div>
-        </section>
-        <br>    
-        <table>
-            <thead>
-                <tr>
-                    <b><td>name</td></b>
-                    <b><td>number</td></b>
-                    <b><td>location</td></b>
-                    <b><td>status</td></b>
-                    <b><td>action</td></b>   
-                </tr>
-            </thead>
-            <tbody>
-                <!--rows are injected here-->
-            </tbody>
-        </table>
-    </main>
-
+    <h1>supplier dashboard</h1>
 </body>
 </html>
