fixed a bug i.e happened because of strict type checking

--- a/templates/register.html
+++ b/templates/register.html
@@ -32,10 +32,10 @@
         <label for="utype"> Type of user</label>
         <select name="utype" required>
             <option value="" disabled selected> Select the kind of user</option>
-            <option value = "supplier">Supplier</option>
-            <option value = "Hospital">Hospital</option>
+            <option value = "distributor">Supplier</option>
+            <option value = "hospital">Hospital</option>
             <option value = "industry">Industry</option>
-            <option value="rep">Representative</option>
+            <option value="Rep">Representative</option>
         </select>
         <br>
         <br>
