--- a/static/style.css
+++ b/static/style.css
@@ -128,15 +128,12 @@
 }
 
 .register_card_design{
-    padding: 20px;
+    padding:10px;
     background-color: rgb(166, 235, 251);
-    border-top-left-radius: 40px;
-    border-bottom-right-radius: 40px;
-    border-bottom-left-radius: 40px;
-    border-top-right-radius: 40px;
+    border-radius: 40px;
     text-align: center;
-    height: 70vh;
-    max-width: 100vw;
+    width:auto;
+    height: 450px;
     font-size: 20px;
     color: rgb(0, 0, 0);
 
@@ -145,10 +142,12 @@
 .register_card_background{
     background-image: url("https://thumbs.dreamstime.com/b/illustration-hospital-registration-area-featuring-computers-reception-desk-plants-ideal-healthcare-related-designs-376121696.jpg");
     background-size: cover;
-   
+
+    
     height: 100vh;
     width: 100vw;
     justify-content: center;
+    margin: 10px;
 
 }
 
@@ -167,4 +166,78 @@
     font-family: "Bree Serif";
     color: rgb(52, 47, 47);
     text-align: center;
+}
+
+.register_card_form_design{
+    font-family: "Bree Serif";
+    color: black;
+    text-align: center;
+    font-size: 24px;
+}
+
+.admin_user_approval_card_heading{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 36px;
+    font-weight: bold;
+    color: rgb(4, 4, 4);
+    text-align: center;
+}
+
+.admin_user_approval_card_background{
+    background-color: rgb(213, 187, 213);
+    border-radius: 20px;
+}
+
+.admin_user_approval_card_design{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: medium;
+}
+
+.admin_user_approval_card_accept_button_design{
+    background-color: rgb(123, 246, 107);
+    border-radius: 20px;
+    text-align: center;
+    color:rgb(0, 0, 0);
+    border-width: 0px;
+    width: 10vw;
+    height: 36px;
+}
+
+.admin_user_approval_card_reject_button_design{
+    background-color: rgb(229, 95, 83);
+    border-radius: 20px;
+    text-align: center;
+    color:rgb(0, 0, 0);
+    border-width: 0px;
+    width: 10vw;
+    height: 36px;
+}
+.admin_patient_record_card_design{
+    background-color: beige;
+    border-radius: 20px;
+    width: 500px;
+    height: 100px;
+    margin: 20px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 7px;
+
+}
+
+.admin_patient_record_button_design{
+    background-color: rgb(65, 133, 182);
+    border-radius: 20px;
+    text-align: center;
+    color:white;
+    border-width: 0px;
+    width: 10vw;
+    height: 36px;
+
+}
+
+.industry_dashboard_background{
+
+    
 }
