--- a/static/style.css
+++ b/static/style.css
@@ -237,7 +237,47 @@
 
 }
 
-.industry_dashboard_background{
-
+.industry_dashboard_main_heading{
+    font-family: 'Times New Roman', Times, serif; 
+    color: rgb(61, 1, 55); 
+    font-size: 48px; 
+    text-align: center;
+}
+.industry_dashboard_sub_heading{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: rgb(93, 18, 163);
+    font: size 30px; 
+    margin: 20px;
+}
+.industry_dashboard_add_medicine_table{
+    margin: 25px;
+    background-color: rgb(217, 215, 255); 
+    padding: 10px; 
+    text-align: center; 
+    font-size: 22px; 
+    font-weight: 600;
+}
+.industry_dashboard_add_medicine{
+    background-color: rgb(249, 255, 255);
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 500;
+    font-size: 18px;
+    color: black;
+    padding: 20px;
+    margin: 20px;
+    border-radius: 15px;
+    width: 400px;
+    border-color: rgb(27, 27, 27);
     
+}
+
+.industry_dashboard_add_medicine_button{
+    background-color: rgb(57, 55, 179);
+    border-radius: 20px;
+    text-align: center;
+    color:white;
+    border-width: 0px;
+    width: 10vw;
+    height: 36px;
 }
