--- a/templates/industry_dashboard.html
+++ b/templates/industry_dashboard.html
@@ -6,22 +6,22 @@
     <title>VitalNest</title>
     <link rel = "stylesheet" href = "/static/style.css">
 </head>
-<body>
-    <h1>Vital Nest pharma Industry Dashboard {{ind_id}}</h1>
+<body style="background-color:#ebf9fa;">
+    <h1 class="industry_dashboard_main_heading">Vital Nest pharma Industry Dashboard {{ind_id}}</h1>
     <hr>
     <div>
-        <h2>Medicine data</h2>
-        <table border="1" cellpadding="5" cellspacing="0">
+        <h2 class="industry_dashboard_sub_heading">Medicine data</h2>
+        <table border="1.5" cellpadding="15" cellspacing="0" style="margin: 25px;">
             <thead>
-                <tr>
+                <tr class="industry_dashboard_add_medicine_table">
                     <th>Name</th>
                     <th>Uses</th>
                     <th>Side Effects</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody style="background-color: white;">
                 {% for medicine in medicines %}
-                <tr>
+                <tr style="padding: 10px; text-align: center;">
                     <td>{{ medicine[0] }}</td>
                     <td>{{ medicine[1] }}</td>
                     <td>{{ medicine[2] }}</td>
@@ -30,8 +30,9 @@
             </tbody>
         </table>
     </div>
-    <hr>
-    <form action="/newMedicine" method="post">
+    <h2 class="industry_dashboard_sub_heading">Add new Medicines</h2>
+    <div class="industry_dashboard_add_medicine">
+    <form action="/newMedicine" method="post" >
         
         <input type="hidden" name="ind_id" value="{{ind_id}}">
 
@@ -44,7 +45,8 @@
         <label>Side Effects:</label><br>
         <input type="text" name="side_effects"><br><br>
         
-        <input type="submit" value="Submit">
+        <input type="submit" value="Submit" class="industry_dashboard_add_medicine_button">
     </form>
+    </div>
 </body>
 </html>
