--- a/templates/industry_dashboard.html
+++ b/templates/industry_dashboard.html
@@ -36,13 +36,13 @@
         
         <input type="hidden" name="ind_id" value="{{ind_id}}">
 
-        <label>Tablet Name:</label><br>
+        <label style="font-size: 20px;">Tablet Name:</label><br>
         <input type="text" name="med_name" required><br><br>
         
-        <label>Uses:</label><br>
+        <label style="font-size: 20px;">Uses:</label><br>
         <input type="text" name="uses"><br><br>
 
-        <label>Side Effects:</label><br>
+        <label style="font-size: 20px;">Side Effects:</label><br>
         <input type="text" name="side_effects"><br><br>
         
         <input type="submit" value="Submit" class="industry_dashboard_add_medicine_button">
